tests/small/bad/testMain05.lat
/* main with parematers */
int main(int a, int b){
    int x, y = 7;
    printInt(x);
    return 10;
    printInt(y);
    return 0 ;
}